tests/baselines/reference/classAbstractManyKeywords.errors.txt
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractManyKeywords.ts(3,1): error TS1005: 'export' expected.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractManyKeywords.ts(4,17): error TS1005: '=' expected.


==== tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractManyKeywords.ts (2 errors) ====
    export default abstract class A {}
    export abstract class B {}
    default abstract class C {}
    ~~~~~~~
!!! error TS1005: 'export' expected.
    import abstract class D {}
                    ~~~~~
!!! error TS1005: '=' expected.